# qtgltexture

./: CMakeLists.txt  main.cpp  mymainwindow.cpp  mymainwindow.h  mymainwindow.ui  myoglwidget.cpp  myoglwidget.h  shaders.qrc  testtab.cpp  testtab.h  testtab.ui
